# qrem

./: .buildinfo  .env-default  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  Tutorial0.html  article_data_analysis.py  changelog.html  conduct.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: Tutorial0.doctree  changelog.doctree  conduct.doctree  contributing.doctree  index.doctree  license.doctree
.doctrees/_templates/: index.doctree
.doctrees/_templates/base/: base.doctree
.doctrees/_templates/python/: attribute.doctree  class.doctree  data.doctree  exception.doctree  function.doctree  method.doctree  module.doctree  package.doctree  property.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/QDT_pyquill/: index.doctree
.doctrees/autoapi/QDT_qiskit/: index.doctree
.doctrees/autoapi/article_plots_functions/: index.doctree
.doctrees/autoapi/benchmark_plots_functions/: index.doctree
.doctrees/autoapi/device_constants/: index.doctree
.doctrees/autoapi/qrem/: index.doctree
.doctrees/tutorials/: 1. Run Characterisation Experiment on IBM or Amazon Backend.doctree  2. Noise Characterisation.doctree  3. Error mitigation tutorial.doctree  complete_workflow.doctree
.github/workflows/: documentation.yml
_sources/: Tutorial0.md.txt
_sources/autoapi/: index.rst.txt
_sources/tutorials/: 2. Noise Characterisation.ipynb.txt
_templates/: index.html
_templates/base/: base.html
_templates/python/: attribute.html  class.html  data.html  exception.html  function.html  method.html  module.html  package.html  property.html
autoapi/: index.html
autoapi/QDT_pyquill/: index.html
autoapi/QDT_qiskit/: index.html
autoapi/article_plots_functions/: index.html
autoapi/benchmark_plots_functions/: index.html
autoapi/device_constants/: index.html
autoapi/functions_aws_rigetti/: index.html
autoapi/plotting_constants/: index.html
autoapi/pyquil_utilities/: index.html
autoapi/qiskit_utilities/: index.html
autoapi/qrem/: index.html
autoapi/visualisation/: index.html
docs/: Makefile  conf.py  index.md  make.bat
docs/_templates/: index.rst
docs/tutorials/: 1. Run Characterisation Experiment on IBM or Amazon Backend.ipynb  2. Noise Characterisation.ipynb  3. Error mitigation tutorial.ipynb  DDOT_noiseless_simulation_results_2024-01-04 q10.pkl.pkl  complete_workflow.ipynb
html/: index.html
src/qrem/: __init__.py
tutorials/: 1. Run Characterisation Experiment on IBM or Amazon Backend.html  2. Noise Characterisation.html  3. Error mitigation tutorial.html  complete_workflow.html
(+423 files in other folders)
